<resources>
    <string name="app_name">Gym Progress</string>
    <string name="action_settings">Ustawienia</string>
    <string name="description_logo">Logo</string>
    <string name="user_name">Nazwa użytkownika</string>
    <string name="user_password">Hasło</string>
    <string name="user_password_repeat">repeat password</string>
    <string name="user_register">Register</string>
    <string name="user_forgotPassword">Nie pamiętasz hasła?</string>
    <string name="login_btn">Zaloguj</string>
    <string name="email">email</string>
    <string name="welcome_user">Witaj %1$s</string>
    <string name="stats">Statystyki</string>
    <string name="user_profile">Profil</string>
    <string name="measurement">Pomiary</string>
    <string name="muscle_party">Nazwa Partii mięśniowej</string>
    <string name="exercise_name">Nazwa ćwiczenia</string>
    <string name="weight">kg</string>
    <string name="series_number">Serie</string>
    <string name="reps_number">Reps</string>
    <string name="cancel_btn">Cancel</string>
    <string name="add_btn">Add</string>
    <string name="fill_gaps">Proszę, uzupełnij wszystkie pola</string>
    <string name="password_rules">Hasło musi zawierać co najmniej %1$i znaków, cyfrę i wielką literę</string>
    <string name="password_difference">Hasła różnią się </string>
    <string name="login_rules">Login musi posiadać przynajmniej %1$i znaków</string>
    <string name="email_error">Email jest nieprawidłowy</string>
    <string name="user_added">Użytkownik został dodany</string>
    <string name="user_add_error">Błąd przy dodawaniu użytkownika</string>

    <string name="main_menu_subtitle">MAKE YOURSELF BETTER</string>
    <string name="main_menu_confirm_button">confirm</string>

    <string name="water_zero_information">%.2fL </string>
    <string name="daily_save">SAVE</string>

    <string-array name="exercises_names">
        <item>rozpiętki</item>
        <item>brzuszki</item>
        <item>falling fole</item>
    </string-array>

    //series_layout
    <string name="date_label">Date : %1$s </string>
    <string name="muscle_part_label">Muscle Part : %1$s</string>
    <string name="elements_hint_value"> 0 </string>
    <string name="last_element_remove_errror">The last element cannot be removed&#8230;</string>
    <string name="alert_dialog_save">Save</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_remove">Remove</string>
    <string name="alert_dialog_ok">OK</string>

    //measures
    <string name="measures_weight">Weight: </string>
    <string name="measures_height">Height: </string>
    <string name="measures_chest">Chest: </string>
    <string name="measures_waist">Waist: </string>
    <string name="measures_hip">Hip: </string>
    <string name="measures_arm">Arm: </string>
    <string name="measures_thigh">Thigh: </string>
    <string name="measures_calf">Calf: </string>
    <string name="choose_date">Press to filter the results</string>
    <string name="choose_date_reset">Reset filters</string>
    <string name="data_save_success">Data saved with success</string>
    <string name="data_load_success">Success while loading the data</string>
    <string name="data_load_error">Error while loading the data</string>

    <string name="value_newline_kg">%1$s kg\n %2$s</string>
    <string name="value_newline_cm">%1$s cm\n %2$s</string>
    <string name="no_matching_results">%1$s \n\n\n None of the results match the given <filters></filters></string>
    <string name="value_0">0</string>
    <string name="remove_element_title">Are you sure? </string>
    <string name="remove_element_info">You want to remove exercise? All added series will be removed </string>
    <string name="rename_element">Rename exercise name</string>

    <string name="value_lowest">%1$s \n lowest</string>
    <string name="value_highest">%1$s \n <b>highest</b></string>
    <string name="value_average">%1$s \n average</string>
    <string name="week">week</string>
    <string name="calendar">calendar</string>
    <string name="month">month</string>
    <string name="water_cup">water cup</string>
    <string name="water_add">water_add</string>
    <string name="water_minus">water minus</string>
    <string name="daily_tasks">Daily Tasks</string>
    <string name="daily_vegetable">daily vegetable</string>
    <string name="daily_fruit">daily fruit</string>
    <string name="daily_workout">daily workout</string>
    <string name="chose_your_model">Chose your model</string>
    <string name="choose_man_model">Choose MAN model</string>
    <string name="choose_woman_model">Choose WOMAN model</string>
    <string name="change_model">change model</string>
    <string name="human_model">human model</string>

</resources>
