<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/buttonColor">

    <TextView
        android:id="@+id/partName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/muscle_party"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/exercisename_editTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:textColor="@color/whiteColor"
        android:theme="@style/EditTextTheme"
        android:hint="@string/exercise_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/partName"
        />

    <EditText
        android:id="@+id/weight_editTxt"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:hint="@string/weight"
        android:textColor="@color/whiteColor"
        android:theme="@style/EditTextTheme"
        android:inputType="numberDecimal"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/series_editTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercisename_editTxt" />


    <EditText
        android:id="@+id/series_editTxt"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/series_number"
        android:textColor="@color/whiteColor"
        android:theme="@style/EditTextTheme"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@id/reps_editTxt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/weight_editTxt"
        app:layout_constraintTop_toBottomOf="@+id/exercisename_editTxt" />

    <EditText
        android:id="@+id/reps_editTxt"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/reps_number"
        android:textColor="@color/whiteColor"
        android:theme="@style/EditTextTheme"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/series_editTxt"
        app:layout_constraintTop_toBottomOf="@+id/exercisename_editTxt" />

    <Button
        android:id="@+id/dialogCancel_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/roundedbtn"
        android:text="@string/cancel_btn"
        android:textColor="@color/whiteColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_editTxt" />

    <Button
        android:id="@+id/dialogOk_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/roundedbtn"
        android:text="@string/add_btn"
        android:textColor="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reps_editTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>