<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background_layout" />

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_height"
        android:layout_margin="@dimen/calendar_margin"
        android:contentDescription="@string/description_logo"
        android:theme="@style/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_size"
        android:layout_marginTop="@dimen/calendar_margin"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/calendar" />

    <ImageView
        android:id="@+id/water_cup"
        android:layout_width="@dimen/water_icon_size"
        android:layout_height="@dimen/water_icon_size"
        android:contentDescription="@string/water_cup"
        android:layout_marginStart="@dimen/water_margin"
        android:layout_marginTop="@dimen/calendar_margin"
        android:background="@drawable/watercup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="@color/whiteColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/water_cup"
        app:layout_constraintTop_toTopOf="@id/water_cup" />

    <EditText
        android:id="@+id/water_operation_value"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:gravity="center"
        android:textColor="@color/whiteColor"
        android:autofillHints="@string/value_0"
        android:hint="@string/value_0"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/plus_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/water_add"
        android:onClick="waterChange"
        android:background="@drawable/ic_add_circle_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/water_operation_value"
        app:layout_constraintStart_toEndOf="@id/water_operation_value"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/minus_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:onClick="waterChange"
        android:contentDescription="@string/water_minus"
        android:background="@drawable/ic_remove_circle_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/water_operation_value"
        app:layout_constraintStart_toEndOf="@id/plus_button"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/daily_tasks"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/vegetable_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/carro"
        android:contentDescription="@string/daily_vegetable"
        app:layout_constraintEnd_toEndOf="@id/water_cup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <CheckBox
        android:id="@+id/vegetable_checkbox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:theme="@style/MyAppThemeCheckBox"
        app:layout_constraintStart_toEndOf="@id/vegetable_icon"
        app:layout_constraintTop_toTopOf="@id/vegetable_icon" />

    <ImageView
        android:id="@+id/apple_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/aplle"
        android:contentDescription="@string/daily_fruit"
        app:layout_constraintEnd_toStartOf="@id/practice_icon"
        app:layout_constraintStart_toEndOf="@id/vegetable_icon"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <CheckBox
        android:id="@+id/apple_checkbox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:theme="@style/MyAppThemeCheckBox"
        app:layout_constraintStart_toEndOf="@id/apple_icon"
        app:layout_constraintTop_toTopOf="@id/apple_icon" />


    <ImageView
        android:id="@+id/practice_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_fitness_center_black_24dp"
        android:contentDescription="@string/daily_workout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/water_operation_value"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <CheckBox
        android:id="@+id/practice_checkbox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:theme="@style/MyAppThemeCheckBox"
        app:layout_constraintStart_toEndOf="@id/practice_icon"
        app:layout_constraintTop_toTopOf="@id/apple_icon" />

    <Button
        android:id="@+id/daily_save"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/daily_save"
        android:textColor="@color/hintColor"
        android:background="@drawable/rounded_btn"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apple_checkbox" />
</androidx.constraintlayout.widget.ConstraintLayout>