<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include layout="@layout/content_main" />

    <ImageView
        android:id="@+id/logo_imgView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/description_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_editTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:inputType="text"
        android:hint="@string/user_name"
        android:drawablePadding="5dp"
        android:textColor="@color/whiteColor"
        android:textColorHint="@color/whiteColor"
        android:cursorVisible="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_imgView"
        android:drawableStart="@drawable/ic_person_black_24dp"/>
    <EditText
        android:id="@+id/password_editTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/user_password"
        android:drawablePadding="5dp"
        android:textColor="@color/whiteColor"
        android:textColorHint="@color/whiteColor"
        android:cursorVisible="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_editTxt"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_forgotPassword"
        android:layout_marginTop="10dp"
        android:textColor="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="@+id/password_editTxt"
        app:layout_constraintTop_toBottomOf="@id/password_editTxt" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/roundedbtn"
        android:text="@string/login_btn"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        android:onClick="move"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>