<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blackHalfTransparent">

    <TextView
        android:id="@+id/partName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="17sp"
        android:text="@string/remove_element_title"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textColor="@color/whiteColor"
        android:theme="@style/TextViewMeasures"
        android:gravity="left"
        android:text="@string/remove_element_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/partName"
        />

    <Button
        android:id="@+id/dialogCancel_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/cancel_btn"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_textView"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/dialogOk_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_btn"
        android:textStyle="bold"
        android:text="@string/alert_dialog_remove"
        android:textColor="@color/whiteColor"
        app:layout_constraintStart_toEndOf="@+id/dialogCancel_btn"
        app:layout_constraintTop_toBottomOf="@+id/info_textView"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>