<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blackHalfTransparent">

    <TextView
        android:id="@+id/partName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:textSize="17sp"
        android:text="@string/rename_element"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="17sp"
        android:hint="@string/exercise_name"
        android:textColorHint="@color/hintColor"
        android:textStyle="bold"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/partName" />

    <Button
        android:id="@+id/dialogCancel_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/cancel_btn"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercise_name"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/dialogOk_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/alert_dialog_save"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/dialogCancel_btn"
        app:layout_constraintTop_toBottomOf="@id/exercise_name"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>