<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blackHalfTransparent">

    <TextView
        android:id="@+id/partName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="20sp"
        android:text="@string/muscle_party"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/exercisename_editTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:textColor="@color/whiteColor"
        android:theme="@style/EditTextTheme"
        android:hint="@string/exercise_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/partName"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/exercisename_editTxt">

        <Button
            android:id="@+id/dialogCancel_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:layout_marginRight="10dp"
            android:background="@drawable/roundedbtn"
            android:text="@string/cancel_btn"
            android:textColor="@color/whiteColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <Button
            android:id="@+id/dialogOk_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/roundedbtn"
            android:text="@string/add_btn"
            android:layout_marginLeft="10dp"
            android:layout_weight=".5"
            android:textColor="@color/whiteColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reps_editTxt" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>