<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/include"
        layout="@layout/background_layout" />
    <ImageView
        android:id="@+id/logo_imgView"
        android:src="@drawable/squar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleY="0"
        android:scaleX="0"
        android:alpha="0"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/description_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:alpha="0"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:textColor="@color/whiteColor"
        app:layout_constraintBottom_toTopOf="@+id/username_editTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_imgView" />
    <EditText
        android:id="@+id/username_editTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:hint="@string/user_name"
        android:drawablePadding="5dp"
        android:alpha="0"
        android:textColor="@color/whiteColor"
        android:textColorHint="@color/whiteColor"
        android:cursorVisible="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        android:drawableStart="@drawable/ic_person_black_24dp"/>
    <EditText
        android:id="@+id/password_editTxt"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:alpha="0"
        android:hint="@string/user_password"
        android:drawablePadding="5dp"
        android:textColor="@color/whiteColor"
        android:textColorHint="@color/whiteColor"
        android:cursorVisible="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_editTxt"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="zarejestruj sie"
        android:alpha="0.1"
        android:layout_marginTop="10dp"
        android:textColor="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="@+id/password_editTxt"
        app:layout_constraintTop_toBottomOf="@id/password_editTxt" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/login_btn"
        android:textColor="@color/whiteColor"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>